--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     </head>
 
     <body>
-        <div class="bgimg-1">
+      
+        <div class="bgimg-1  row d-flex justify-content-around ">
+          <div class="col-md-12">
+          </div>
         </div>
         
         <div class="bgimg-4 row d-flex justify-content-around">
